--- a/questionstoask.in
+++ b/questionstoask.in
@@ -40,4 +40,21 @@ Liveness probes: Use these liveness checks to assess whether an application runn
 
 5) https://kubesandclouds.com/2021-01-20-ksniff/
 
+6) Karpenter binds the pod to new node that it provisioned. Karpenter eliminates the need to manage many different node groups. You can deploy n number of provisioners like below based on your needs
+apiVersion: karpenter.sh/v1alpha5
+kind: Provisioner
+metadata:
+  name: default
+spec:
+  requirements:
+    - key: karpenter.sh/capacity-type
+      operator: In
+      values: ["spot"]
+  limits:
+    resources:
+      cpu: 1000
+  provider:
+    instanceProfile: KarpenterNodeInstanceProfile-${CLUSTER_NAME}
+  ttlSecondsAfterEmpty: 30
+
 
